# docx-md-comments

./: .gitignore  AGENTS.md  Makefile  PUBLISHING.md  Preregistration_Original.docx  README.md  RELEASE_NEXT_STEPS.md  RELEASING.md  d2m  dmc  dmt  docx-comments  docx2md  m2d  md2docx  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
battle_compat/: Preregistration_final.docx  Preregistration_final_no_compat.docx
src/dmc/: cli.py  commands.py  converter.py
src/dmt/: cli.py  converter.py
src/docx_comments_roundtrip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cli_entrypoints.py  test_markdown_attr_transforms.py  test_roundtrip_edges.py  test_roundtrip_example.py
tests/helpers/: __init__.py  diagnostics.py  docx_inspector.py  markdown_inspector.py
