[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-md-comments"
version = "1.0.0"
description = "Lossless DOCX <-> Markdown conversion preserving Word comment threads"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "docx-md-comments maintainers"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Pascal-Kueng/docx-md-comments"
Issues = "https://github.com/Pascal-Kueng/docx-md-comments/issues"

[project.scripts]
dmc = "dmc.cli:main"
docx-comments = "dmc.cli:main_docx_comments"
docx2md = "dmc.cli:main_docx2md"
md2docx = "dmc.cli:main_md2docx"
d2m = "dmc.cli:main_docx2md"
m2d = "dmc.cli:main_md2docx"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
